--- a/back-end/pune/src/main/resources/application.properties
+++ b/back-end/pune/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8081
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/mbaro_pune
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
