--- a/back-end/pune/src/main/resources/application.properties
+++ b/back-end/pune/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+spring.application.name=mbaro-pune
 server.port=8081
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mbaro_pune
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mbaro_pune?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
