--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bootstrap": "^5.1.3",
+    "creditcardpayments": "^1.0.3",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
