chat backend implemented

--- a/back-end/pune/src/main/resources/application.properties
+++ b/back-end/pune/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#max file and request size
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=11MB
