--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,8 +27,11 @@
     "bootstrap": "^5.1.3",
     "creditcardpayments": "^1.0.3",
     "jquery": "^3.6.0",
+    "net": "^1.0.2",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -38,6 +41,8 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
