--- a/back-end/pune/src/main/resources/application.properties
+++ b/back-end/pune/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mbaro_pune?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
