heroku deploy configurations

--- a/back-end/pune/src/main/resources/application.properties
+++ b/back-end/pune/src/main/resources/application.properties
@@ -4,9 +4,13 @@ server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mbaro_pune?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/mbaro_pune?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=admin
+
+spring.datasource.url=jdbc:mysql://b4892edad9a8e7:f788eb32@us-cdbr-east-06.cleardb.net/heroku_61d721b1c837ff1?reconnect=true
+spring.datasource.username=b4892edad9a8e7
+spring.datasource.password=f788eb32
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
