--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "service-provider",
+  "name": "mbaro",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "bootstrap": "^5.1.3",
     "creditcardpayments": "^1.0.3",
+    "express": "^4.18.1",
     "jquery": "^3.6.0",
     "net": "^1.0.2",
     "ngx-bootstrap": "^8.0.0",
